# SEM1D

./: CMakeLists.txt  README.md
SEM1D/: Mesh
SEM1D/src/: Concepts.h  Element.h  Mesh.h  mesh.h
examples/: CMakeLists.txt  MeshExample.cpp
tests/: CMakeLists.txt
